# mlx-websockets

./: .coveragerc  .cz.toml  .flake8  .gitignore  .pre-commit-config.yaml  CODE_REVIEW_CHECKLIST.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  TESTING_STRATEGY.md  cleanup_processes.py  force_cleanup.sh  mlx_streaming_server.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
Formula/: mlx-websockets.rb
mlx_websockets/: __init__.py  __main__.py  _version.py  cli.py  daemon.py  exceptions.py  logging_utils.py  process_registry.py  resource_monitor.py  server.py
scripts/: setup-homebrew-tap.sh  setup.sh  update-homebrew-resources.sh
tests/: __init__.py  conftest.py  test_basic_inference.py  test_benchmarks.py  test_cli.py  test_config_validation.py  test_daemon.py  test_end_to_end.py  test_error_handling.py  test_helpers.py  test_image_handling.py  test_inference.py  test_installation.py  test_integration.py  test_performance.py  test_process_management.py  test_process_registry.py  test_resource_monitor.py  test_server.py  test_server_async.py  test_server_error_handling.py  test_server_performance.py  test_server_unit_extended.py  test_server_validation.py
